cambio de datos

--- a/index.html
+++ b/index.html
@@ -28,12 +28,9 @@
     mi trabajo con entereza y pasión, cumpliendo así con mis anhelos y expectativas de quien me contrate.</p>
     <h3>Datos Personales</h3>
     <ul>
-        <li>Nombre: Manuel Esteban Avalos Peña.</li>
-        <li>Lugar de Nacimiento: Santiago, Chile.</li>
-        <li>Fecha de Nacimiento: 25/septiembre/1986</li>
+        <li>Nombre: Esteban Avalos.</li>
         <li>Edad: 35 Años</li>
         <li>Nacionalidad: Chileno</li>
-        <li>Estado Civil: Casado</li>
         <li>correo electronico:<a href="mailto:m.avalosp86@gmail.com">m.avalosp86@gmail.com</a> </li>
     </ul>
     <h3>Formacion Academica</h3>
