--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <P></P>
     <H1>Curriculum Vitae</H1>
-    <img src="focot c.v.jpeg" width="100">
+    <img src="fotoperfil.jpg" width="100">
     <br>
     <a href="https://www.instagram.com/el_rincon_de_tebi/"><img src="instagram.png" width="30" /></a>
 
